--- a/blog/garden.mdx
+++ b/blog/garden.mdx
@@ -15,7 +15,7 @@ Simply reach out to our support team, and they'll lend you a green thumb, a wate
 Remember, even the mightiest oak was once a little nut that held its ground. So, if you can't follow these instructions, don't be afraid to leaf us a message! 🌱🌳🪴
 
 
-![Creating Garden](https://github.com/jannelson36/GreenScape/blob/main/static/Discover%20The%20Joy%20Of%20Gardening-modified.png?raw=true)
+![Creating Garden](https://github.com/jannelson36/GreenScape/blob/main/static/Open%20Garden%20(1920%20%C3%97%201080px)%20(1).gif?raw=true)
 
 *Image source: [greenscape.example](https://greenscape.example)*
 
