--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 
 # Creating an Exciting Event with Us
 
-![Garden Events](https://github.com/jannelson36/GreenScape/blob/main/static/Open%20Garden%20(2).gif?raw=true)
+![Garden Events](https://github.com/jannelson36/GreenScape/blob/main/static/Discover%20The%20Joy%20Of%20Gardening-modified.png?raw=true)
 
 At Greenscape, we believe in making your events memorable and hassle-free. Whether it's a conference, seminar, workshop, or a special celebration, we're here to help you create an unforgettable experience. Follow these steps to get started:
 
